# Parameter-Generator-for-Federated-Learning

./: .gitignore  README.md  command.py  pyproject.toml  run.sh
dataset/: client_app.py  custom_strategy.py  download_emnist.py  server_app.py  utils.py  validate_checkpoint.py
dataset/configurations/: cifar100_resnet18.toml  cifar10_resnet18.toml  emnist_resnet18.toml  fmnist_cnn.toml  fmnist_resnet18.toml  imagenet-1k_resnet18.toml  mnist_cnn.toml  mnist_lenet5.toml  mnist_resnet18.toml  mnist_vit_tiny.toml  svhn_resnet18.toml
dataset/models/: cnn.py  lenet5.py  resnet18.py  vit_tiny.py
dataset/toolkit/: __init__.py  cifar10.py  cifar100.py  emnist.py  fashion_mnist.py  imagenet-1k.py  mnist.py  svhn.py
