[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parameter-genertator-for-federated-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "maopi"

[tool.flwr.app.components]
serverapp = "dataset.server_app:app"
clientapp = "dataset.client_app:app"

[tool.flwr.app.config]
dataset-name = "cifar10"
model-name = "resnet18"
model-path = "dataset.models.resnet18.ResNet18"
image-size = 32
num-classes = 10 
num-channels = 3
num-server-rounds = 10        # 服务端训练轮次
fraction-evaluate = 0.0      # 每轮参与评估的客户端比例
local-epochs = 5             # 客户端本地训练轮次（关键参数）
learning-rate = 0.01          # 客户端学习率（关键参数）
batch-size = 32              # 客户端批次大小（关键参数）
alpha = 1.0                  # 迪利克雷分布参数
fraction-fit = 0.5

[tool.flwr.federations]
default = "local-simulation-gpu"  # 默认使用本地模拟模式

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10   # 客户端节点总数

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25

